exports[`Menu dividerClasses return web classes 1`] = `"push-double-ends@lap-and-up push-half-ends"`;

exports[`Menu parses query 1`] = `
Object {
  "definitions": Array [
    Object {
      "directives": Array [],
      "kind": "OperationDefinition",
      "name": Object {
        "kind": "Name",
        "value": "GetPhoto",
      },
      "operation": "query",
      "selectionSet": Object {
        "kind": "SelectionSet",
        "selections": Array [
          Object {
            "alias": null,
            "arguments": Array [
              Object {
                "kind": "Argument",
                "name": Object {
                  "kind": "Name",
                  "value": "cache",
                },
                "value": Object {
                  "kind": "BooleanValue",
                  "value": false,
                },
              },
            ],
            "directives": Array [],
            "kind": "Field",
            "name": Object {
              "kind": "Name",
              "value": "currentPerson",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "alias": null,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "photo",
                  },
                  "selectionSet": null,
                },
              ],
            },
          },
        ],
      },
      "variableDefinitions": Array [],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 76,
    "source": Source {
      "body": "
  query GetPhoto {
    currentPerson(cache: false) {
      photo
    }
  }
",
      "name": "GraphQL",
    },
    "start": 3,
  },
}
`;

exports[`Menu renders with props 1`] = `
<div
  className="background--light-secondary soft-double-bottom soft-double-sides@lap-and-up">
  <section
    className="">
    <div
      className="push-double-ends@lap-and-up push-half-ends">
      <div
        className=""
        style={
          Object {
            "borderLeft": 0,
            "borderRight": 0,
          }
        }>
        <Link
          className="plain text-dark-secondary"
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/profile/settings/personal-details">
          <RenderCell
            name="Personal Details" />
        </Link>
        <Link
          className="plain text-dark-secondary"
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/profile/settings/home-address">
          <RenderCell
            name="My Address" />
        </Link>
        <button
          className="plain text-dark-secondary display-inline-block one-whole"
          style={
            Object {
              "position": "relative",
            }
          }>
          <RenderCell
            iconFunc={[Function]}
            name="Upload Profile Photo">
            <input
              className="locked-ends locked-sides"
              onChange={[Function]}
              style={
                Object {
                  "opacity": 0,
                  "zIndex": 1,
                }
              }
              type="file" />
          </RenderCell>
        </button>
        <Link
          className="plain text-dark-secondary"
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/profile/settings/change-password">
          <RenderCell
            last={true}
            name="Change Password" />
        </Link>
      </div>
    </div>
    <div
      className="push-double-ends@lap-and-up push-half-ends">
      <div
        className=""
        style={
          Object {
            "borderLeft": 0,
            "borderRight": 0,
          }
        }>
        <a
          className="plain text-dark-secondary"
          href="mailto:web.helpdesk@newspring.cc">
          <RenderCell
            last={true}
            name="Give Feedback" />
        </a>
      </div>
    </div>
    <div
      className="push-double-ends@lap-and-up push-half-ends">
      <div
        className=""
        style={
          Object {
            "borderLeft": 0,
            "borderRight": 0,
          }
        }>
        <Link
          className="plain text-dark-secondary"
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/give/home#saved-payments">
          <RenderCell
            name="Saved Accounts" />
        </Link>
        <Link
          className="plain text-dark-secondary"
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/give/schedules">
          <RenderCell
            name="Scheduled Contributions" />
        </Link>
        <Link
          className="plain text-dark-secondary"
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/give/history">
          <RenderCell
            last={true}
            name="Giving History" />
        </Link>
      </div>
    </div>
    <div
      className="push-double-ends@lap-and-up push-half-ends">
      <div
        className=""
        style={
          Object {
            "borderLeft": 0,
            "borderRight": 0,
          }
        }>
        <a
          className="plain text-dark-secondary"
          href="//newspring.cc/privacy"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank">
          <RenderCell
            name="Privacy Policy" />
        </a>
        <a
          className="plain text-dark-secondary"
          href="//newspring.cc/terms"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank">
          <RenderCell
            last={true}
            name="Terms of Use" />
        </a>
      </div>
    </div>
    <div
      className="one-whole text-center push-double-bottom">
      <button
        className="btn--dark-tertiary push-top soft-half-ends"
        onClick={[Function]}>
        Sign Out
      </button>
      <div>
        <h7>
          <small>
             - 
          </small>
        </h7>
      </div>
    </div>
  </section>
</div>
`;

exports[`RenderCell renders default icon 1`] = `
<div
  className="card soft-ends soft-right text-left outlined--light">
  <h6
    className="soft-left flush display-inline-block">
    test
  </h6>
  <i
    className="float-right icon-arrow-next" />
  <h1>
    test
  </h1>
</div>
`;

exports[`RenderCell renders with props 1`] = `
<div
  className="card soft-ends soft-right text-left outlined--light">
  <h6
    className="soft-left flush display-inline-block">
    test
  </h6>
  <i
    className="float-right my-cool-icon" />
  <h1>
    test
  </h1>
</div>
`;
